# server/app.js
@@ -1,62 +1,66 @@
-const path = require('path');
+const express = require('express');
+const bunyanMiddleware = require('bunyan-middleware');
+const helmet = require('helmet');
+const bodyParser = require('body-parser');
 
-const restify = require('restify');
-const SwaggerRestify = require('swagger-restify-mw');
-const setupAuth = require('../api/helpers/auth.js');
+const requireAuth = require('./auth');
+const serveDocs = require('./docs');
 
-var swaggerConfig = {
-  appRoot: path.resolve(__dirname, '..')
-};
+const errors = require('./errors');
 
-const getServerOptions = (config, log) => {
-  var options = {
-    name: config.name,
-    version: config.version,
-    log,
-    handleUncaughtExceptions: false,
-  };
-
-  return options;
-};
-
-const createServer = (config, log) => {
-  return restify.createServer(getServerOptions(config, log));
-};
-
-const setupMiddleware = (server) => {
-  server.use(restify.acceptParser(server.acceptable));
-  server.use(restify.authorizationParser());
-  server.use(restify.dateParser());
-  server.use(restify.queryParser());
-  server.use(restify.gzipResponse());
-  server.use(restify.bodyParser());
-  server.use(restify.conditionalRequest());
-
-  // fix for known curl issue
-  server.pre(restify.pre.userAgentConnection());
-
-  return server;
-};
+const ogrs3Controller = require('../api/controllers/ogrs3');
+const healthController = require('../api/controllers/health');
 
 module.exports = (config, log, callback) => {
-  var server = createServer(config, log);
-  server = setupMiddleware(server);
-  server = setupAuth(server, config.auth, log);
+  const app = express();
 
-  server.on('after', restify.auditLogger({log}));
-  server.on('uncaughtException', function (req, res, route, err) {
-    log.warn(err);
-    res.send(new restify.InternalError(err, err.message || 'unexpected error'));
-  });
+  app.set('json spaces', 2);
+  app.set('trust proxy', true);
 
-  SwaggerRestify.create(swaggerConfig, (err, swaggerRestify) => {
-    if (err) {
-      throw err;
-    }
+  setupBaseMiddleware(app, log);
 
-    // install middleware
-    swaggerRestify.register(server);
+  setupAppRoutes(app, config, log);
 
-    callback(null, server);
-  });
+  return callback(null, app);
 };
+
+function setupBaseMiddleware(app, log) {
+  app.use(bunyanMiddleware({
+    logger: log,
+    obscureHeaders: ['Authorization'],
+  }));
+
+  app.use(function detectAzureSSL(req, res, next) {
+    if (!req.get('x-forwarded-proto') && req.get('x-arr-ssl')) {
+      req.headers['x-forwarded-proto'] = 'https';
+    }
+    return next();
+  });
+
+  app.use(helmet());
+  app.use(bodyParser.json());
+}
+
+function setupAppRoutes(app, config, log) {
+  app.get('/health', healthController.health);
+
+  const authMiddleware = requireAuth(config.auth, log);
+  if (authMiddleware) app.use(authMiddleware);
+
+  app.use(serveDocs());
+
+  app.use(express.static('public'));
+
+  app.post('/calculate/ogrs3', ogrs3Controller.calculate);
+  app.post('/calculate/ogrs3/customised', ogrs3Controller.calculate);
+
+  app.use(function notFoundHandler(req, res) {
+    errors.notFound(res, 'No handler exists for this url');
+  });
+
+  // eslint-disable-next-line no-unused-vars
+  app.use(function errorHandler(err, req, res, next) {
+    req.log.warn(err);
+    errors.unexpected(res, err);
+  });
+}
